S/GYMUP-93/exercises-list-page (#31)
* search-input-and-filter-button

* styled-search-input-and-filter-button

* List-view

* Started-some-accordions

* Started-some-accordions

* Styled-layout

* exercise-list-item

* exercise-list-dto-and-others

* Displaying-exercise-list-to

* Working-list-ui

* Corrected-exercise-list

* exercise-service

* loading-component

* getting-exercises-from-api

* translations

* Searching-exercises

* Cleanup

* Cleanup